<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/colorTan"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/close"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/spellNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/spellTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/spellSourceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/spellDescTextView"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/spellAddBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addSpell"
        android:textSize="14sp" />

    <Button
        android:id="@+id/spellRemoveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/removeSpell"
        android:textSize="14sp" />

</LinearLayout>
